--- a/public/projects.html
+++ b/public/projects.html
@@ -221,7 +221,7 @@
                         </ul>
                     </li>
                     <li>This metronome exists as a personal project, so it will not be listed on the App Store, but the git repository <a target="_blank" href="https://github.com/justinciocoi/Apple-Watch-Haptic-Metronome">here</a> 
-                        contains all of the source code necessry to recreate this app on your own device
+                        contains all of the source code necessary to recreate this app on your own device
                     </li>
                 </ul>
             </div>
