added name scramble feature on landing page

--- a/public/index.html
+++ b/public/index.html
@@ -196,5 +196,6 @@
     <br>
     <br>
     <script src="Function/mouseFollow.js"></script>
+    <script src="Function/cipher.js"></script>
 </body>
 </html>
