moved index to root dir

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="public/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Justin Ciocoi Portfolio</title>
@@ -12,13 +12,13 @@
     <div class="bcircle" id="circ3"></div>
     <div class="bcircle" id="circ4"></div>
     <div class="headerBoxRight">
-        <img id="headerImage" src="Images/laptop.png">
+        <img id="headerImage" src="public/Images/laptop.png">
        <p class="headerBoxText">New York, NY</p>
        <p class="headerBoxText">
         <a href="mailto:justinciocoi@gmail.com">E-Mail</a>
        </p>
     </div>
-    <img id="photo" src="Images/justin.jpg">
+    <img id="photo" src="public/Images/justin.jpg">
     <div id="introBox">
         <p id="name">Justin Ciocoi</p>
         <p id="description">
@@ -48,10 +48,10 @@
                 and system administration duties including database management and integrating new Windows 11 
                 devices onto the network. I also have web design experience both in the production of enterprise 
                 sites such as <a target="”_blank”" href="https://hisassoc.com">hisassoc.com</a> as well as personal 
-                web-hosted projects that can be found under the <a href="projects.html">projects</a> section.
+                web-hosted projects that can be found under the <a href="public/projects.html">projects</a> section.
             </div>
             <div id="innerFlex" class="growDescription">
-                <p>Find more <a href="experience.html"> here</a></p>
+                <p>Find more <a href="public/experience.html"> here</a></p>
             </div>
         </div>
         <div class="growBox">
@@ -92,7 +92,7 @@
                 </ul>
             </div>
             <div id="innerFlex" class="growDescription">
-                <p>Find more <a href="skills.html"> here</a></p>
+                <p>Find more <a href="public/skills.html"> here</a></p>
             </div>
         </div>
         <div class="growBox">
@@ -104,11 +104,11 @@
                 have spent some time over this last year and a half planning and developing
                 a small variety of personal projects. These projects vary in scope, but many of them
                 boil down to optimizing workflow efficiency. Each project should also have a GitHub 
-                repository associated with it on the <a href="projects.html">projects</a> page which
+                repository associated with it on the <a href="public/projects.html">projects</a> page which
                 contains all relevant code, instructions, and READMEs.
             </div>
             <div id="innerFlex" class="growDescription">
-                <p>Find more <a href="projects.html"> here</a></p>
+                <p>Find more <a href="public/projects.html"> here</a></p>
             </div>
         </div>
     </div>
@@ -129,10 +129,10 @@
                 and system administration duties including database management and integrating new Windows 11 
                 devices onto the network. I also have web design experience both in the production of enterprise 
                 sites such as <a target="”_blank”" href="https://hisassoc.com">hisassoc.com</a> as well as personal 
-                web-hosted projects that can be found under the <a href="projects.html">projects</a> section.
+                web-hosted projects that can be found under the <a href="public/projects.html">projects</a> section.
             </div>
             <div id="innerFlex" class="thingrowDescription">
-                <p>Find more <a href="experience.html"> here</a></p>
+                <p>Find more <a href="public/experience.html"> here</a></p>
             </div>
         </div>
         <div class="thingrowBox">
@@ -172,7 +172,7 @@
                 </ul>
             </div>
             <div id="innerFlex1" class="thingrowDescription">
-                <p>Find more <a href="skills.html"> here</a></p>
+                <p>Find more <a href="public/skills.html"> here</a></p>
             </div>
         </div>
         <div class="thingrowBox">
@@ -185,9 +185,9 @@
                 have spent some time over this last year and a half planning and developing
                 a small variety of personal projects. These projects vary in scope, but many of them
                 boil down to optimizing workflow efficiency. Each project should also have a GitHub repository associated
-                with it on the <a href="projects.html">projects</a> page.            </div>
+                with it on the <a href="public/projects.html">projects</a> page.            </div>
             <div id="innerFlex" class="thingrowDescription">
-                <p>Find more <a href="projects.html"> here</a></p>
+                <p>Find more <a href="public/projects.html"> here</a></p>
             </div>
         </div>
     </div>
@@ -195,7 +195,7 @@
     <p id="footerQuote">"Simplicity, carried to the extreme, becomes elegance." -Jon Franklin</p>
     <br>
     <br>
-    <script src="Function/mouseFollow.js"></script>
-    <script src="Function/cipher.js"></script>
+    <script src="public/Function/mouseFollow.js"></script>
+    <script src="public/Function/cipher.js"></script>
 </body>
 </html>
