--- a/public/experience.html
+++ b/public/experience.html
@@ -11,7 +11,7 @@
     <div class="bcircle" id="circ2"></div>
     <div class="bcircle" id="circ3"></div>
     <div class="bcircle" id="circ4"></div>
-    <a class="homeLink" href="index.html">Back to Home</a>
+    <a class="homeLink" href="../index.html">Back to Home</a>
     <div class="headerBoxRight">
         <img id="headerImage" src="Images/laptop.png">
        <p class="headerBoxText">New York, NY</p>
@@ -136,7 +136,7 @@
     <br>
     <br>
     <hr>
-    <a href="index.html">Back to Home</a>
+    <a href="../index.html">Back to Home</a>
     <br>
     <script src="Function/mouseFollow.js"></script>
 </body>
