--- a/public/projects.html
+++ b/public/projects.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a class="homeLink" href="index.html">Back to Home</a>
+    <a class="homeLink" href="../index.html">Back to Home</a>
     <div class="headerBoxRight">
         <img id="headerImage" src="Images/laptop.png">
        <p class="headerBoxText">New York, NY</p>
@@ -298,7 +298,7 @@
     <br>
     <br>
     <hr>
-    <a href="index.html">Back to Home</a>
+    <a href="../index.html">Back to Home</a>
     <br>
     <script src="Function/mouseFollow.js"></script>
 </body>
