--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <img id="photo" src="public/Images/justin.jpg">
     <div id="introBox">
         <p id="name">Justin Ciocoi</p>
-        <p id="description">
-            Full-Stack Software and Web Development</p>
-        <p id="description">Data Science</p>
-        <p id="description">Cybersecurity</p>
+        <p class="description" id="description">Full-Stack Software and Web Development</p>
+        <p class="description" id="description2">Data Science</p>
+        <p class="description" id="description3">Cybersecurity</p>
         <br>
         <a id="thinLink" href="mailto:justinciocoi@gmail.com">E-Mail</a>
     </div>
