--- a/public/skills.html
+++ b/public/skills.html
@@ -92,13 +92,12 @@
                     <ul class="tinyList">
                         <li>Windows is the operating system I have used most throughout my life</li>
                         <li>I have a fairly deep understanding of managing Windows using built-in tools</li>
-                        <li>However, I personally feel limited by Microsoft's approach to OS design and closed nature</li>
                     </ul>
                 </li>
                 <li>MacOS
                     <ul class="tinyList">
                         <li>I have been regularly using MacOS for the past 7 years, and for the past year, it has likely been my most used operating system</li>
-                        <li>I have the most experience writing software on macOS, although all of the software I have written for macOS has been compatible with Debian Linux</li>
+                        <li>I have the most experience writing software on macOS, although all of the software I have written for macOS has been compatible with Linux for the most part</li>
                         <li>I have recently learned a lot about the ARM architecture after having used Apple silicon for a few months</li>
                     </ul>
                 </li>
@@ -106,7 +105,7 @@
                     <ul class="tinyList">
                         <li>I have set-up countless Linux instances, both on old and virtual hardware</li>
                         <li>The open-source nature of linux has made it integral to my learning about operating systems</li>
-                        <li>I am very comfortable using Debian and Arch versions of linux, as well as Kali Linux's Cybersecurity tools</li>
+                        <li>I am very comfortable using Debian and Arch versions of linux, as well as Kali Linux's Cybersecurity and Pen-Testing tools</li>
                         <li>I have virtualized Linux environments using QEMU, which taught a lot both about the operating system, and virtualization</li>
                     </ul>
                 </li>
@@ -157,9 +156,9 @@
                     <ul class="tinyList">
                         <li>Good understanding of what different performance metrics mean</li>
                         <li>Good understanding of thermal dynamics within a computer system</li>
+                        <li>Experience using intrusion detection and prevention systems</li>
                     </ul>
                 </li>
-                <li>Knowledge to repair certain PCB components</li>
             </ul>
             <h4>Hardware Security</h4>
             <ul>
