--- a/public/projects.html
+++ b/public/projects.html
@@ -293,6 +293,8 @@
                         <li>This is a simple web dashboard that I created for myself and personalized to my location</li>
                         <li>I created it to give me weather data, news I am interested in, as well as some other information</li>
                         <li>I wanted to create a personalized home page for use on my mobile device browsers, and also wanted to better learn practical API usage</li>
+                        <li>The project site can be found <a href="https://simpleDashboard.onrender.com" target="_blank">here</a></li>
+                        <li>All files related to the site can be found in the project's <a href="https://github.com/justinciocoi/simpleDashboard" target="_blank">GitHub repository</a> </li>
                     </ul>
                 </div>
                 <div class="projInnerFlex">
