--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         <p class="description" id="description">Full-Stack Software and Web Development</p>
         <p class="description" id="description2">Data Science</p>
         <p class="description" id="description3">Cybersecurity</p>
-        <br>
-        <a id="thinLink" href="mailto:justinciocoi@gmail.com">E-Mail</a>
+        <div id="thinLink">
+            <a href="mailto:justinciocoi@gmail.com">E-Mail</a>
+        </div>
     </div>
     <br>
     <hr>
