--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
     <br>
     <hr>
     <br>
+    <br>
+    <br>
+    <div id="introBlurb">
+        Hello, my name is Justin Ciocoi and I am an emerging Software Engineering and Information Security professional based in New York City. I expect to graduate with my 
+        Bachelor's of Science in Computer Science and Information Security in August 2024. Below you can find more information regarding my educational and work experience, 
+        as well as my skills and various projects I have made. <i>Hover</i> over a box to see more.
+    </div>
     <div class="flexBox">
         <div class="growBox">
             <div class="moveText">
