--- a/public/projects.html
+++ b/public/projects.html
@@ -23,6 +23,8 @@
         <p id="description2">Cybersecurity</p>
     </div>
     <br>
+    <div id="introBlurb">To see more details about a project <u>click</u> the project title</div>
+    <br>
     <hr>
 
     <div class="bcircle" id="circ1"></div>
