edited to change from expected graduation

--- a/public/experience.html
+++ b/public/experience.html
@@ -48,7 +48,7 @@
         <div class="experienceSection">
             <h2>Educational Experience</h2>
             <h4>B.S. in Computer Science and Information Security at John Jay</h4>
-            <h4>GPA: 3.94 (Expected Graduation August 2024)</h4>
+            <h4>GPA: 3.93</h4>
             <h4>Relevant Computer Science Coursework</h4>
             <ul>
                 <li>Object-Oriented Programming</li>
