--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <br>
     <br>
     <div class="fade-in" id="introBlurb">
-        Hello, my name is Justin Ciocoi and I am an emerging Software Engineering and Information Security professional based in New York City. I expect to graduate with my 
+        Hello, my name is Justin Ciocoi and I am an emerging Software Engineering and Information Security professional based in New York City. I recently graduated with my 
         Bachelor's of Science in Computer Science and Information Security in August 2024. Below you can find more information regarding my educational and work experience, 
         as well as my skills and various projects I have made. <i>Hover</i> over a box to see more. You can also download my resume <a target="_blank" href="public/Documents/Resume_07_29_24.pdf">here</a>
     </div>
@@ -44,8 +44,8 @@
                 Experience
             </div>
             <div class="growDescription">
-                I am currently an enrolled college student and expect to graduate Summa Cum Laude from 
-                John Jay College in New York in August 2024 studying Computer Science and Information Security. 
+                I am currently a technical support intern at District Council No. 9 in Manhattan, and recently graduated
+                from CUNY John Jay with a Bachelor's of Science in Computer Science and Information Security. 
                 During my time there, my focus has been mainly on C++, Python, SQL, and cybersecurity including
                 encryption, authentication, hashing, public and private key protocols, and more. I have spent much 
                 of my time studying and using various Linux distributions (Mostly Debian and Arch) in both a 
