--- a/focus/index.html
+++ b/focus/index.html
@@ -53,7 +53,7 @@
         </button>
 
         <button onclick="pauseTimer()" id="playPauseButton">
-            <img src="images/Pause.png" id="playPauseImage">
+            <img src="images/pause.png" id="playPauseImage">
         </button>
 
     </div>
