added NYU experience and some functionality

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,11 @@
                 <image class="linkImg" src="img/mailblue.png"></image>
             </div>
         </a>
+        <a title="Instagram" href="https://www.instagram.com/justinciocoi/?hl=en" target="_blank">
+            <div class="imageContainer">
+                <image class="linkImg" src="img/logos/instablue.png"></image>
+            </div>
+        </a>
         
     </div>
 
@@ -213,6 +218,35 @@
                     Used third-party tools as well as HTML/CSS to design company site.
                     Worked on maintaining network organization and restructuring the
                     company network drives in order to improve workflow efficiency.
+                </div>
+            </div>
+            <div class="experienceBox">
+                <div class="experienceLeftFlexBox">
+                    <div class="experienceImage">
+                        <img class="experienceImg" src="img/icons/workblue.png">
+                    </div>
+                    <div class="experienceLocation">
+                        <div class="experienceLogo">
+                            <a href="https://nyu.edu" target="_blank">
+                                <img class="experienceLogo" src="img/companies/nyublue.png">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="experienceLocation">
+                        2017-2019
+                    </div>
+                </div>
+                <div class="experienceDescription">
+                    <div class="experienceLabel">
+                        Research Assistant at NYU
+                    </div>
+                    <br>
+                    <div class="specialHR"></div>
+                    <br>
+                    Worked in a physics lab at the Center for Quantum Phenomena under Dr. Davood Shahrjerdi.
+                    I worked closely with the professor and his graduate students to create systems by which
+                    WSe2 (Tungsten Diselenide) and h-BN (hexagonal Boron Nitride) flake thickness could be reasonably
+                    assessed through the use of MatLab data analysis based on flake images.
                 </div>
             </div>
         </div>
