added background elements and styled redirect page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Redirecting...</title>
     <!-- Redirect after 0 seconds -->
     <meta http-equiv="refresh" content="0; url=public/">
+    <link rel="stylesheet" href="public/styles/main.css">
+
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://www.example.com">click here</a>.</p>
+    <div class="flexBox">
+        <div style="margin-top: 50vh;" class="smallLabel">
+            If you are not redirected automatically, <a href="public/index.html">click here</a>.
+        </div>
+    </div>
 </body>
 </html>
