--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
     
 </head>
 <body>
+
+    <canvas id="backgroundCanvas" height="1000vh" width="2000vw">
+
+    </canvas>
     
     <div class="hFlexBox" id="links">
         <a title="GitHub Profile" href="https://github.com/justinciocoi" target="_blank">
