added favicon and link to knicks site

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="styles/skills.css">
     <link rel="stylesheet" href="styles/experience.css">
     <link rel="stylesheet" href="styles/webapps.css">
-    
+    <link rel="icon" href="img/icons/jcblue.png" type="image/x-icon">
+
 </head>
 <body>
 
@@ -321,7 +322,8 @@
                     <div class="description">
                         This project is a dashboard for stats for the New York Knicks 2023-2024 season. 
                         The frontend is created using Node.JS and the database is hosted using AWS services. 
-                        The project includes dynamic stat tables and data analysis and can be found here
+                        The project includes dynamic stat tables and data analysis and can be found 
+                        <a href="https://two023-24-new-york-knicks-data-project.onrender.com/" target="blank">here</a>
                         (Site is hosted using a free Render instance, so loading may take some time) 
                     </div>
                     <div class="flexBox">
