--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
+    <title>Justin Ciocoi</title>
     <!-- Redirect after 0 seconds -->
     <meta http-equiv="refresh" content="0; url=public/">
     <link rel="stylesheet" href="public/styles/main.css">
