added certifications and updated resume

--- a/public/index.html
+++ b/public/index.html
@@ -124,21 +124,38 @@
 
     <div id="experienceSection" class="flexBox">
         <br>
-        <div class="titleLabel">
-            Experience
-        </div>
         <div class="hFlexBox">
             <div class="resumeButton">
                 <a id="resumeLabel" href="docs/resume.pdf" target="_blank">
                     <div id="resumeFlex" class="titleHFlex">
                         <div id="resumeLabel" class="smallLabel">My Resumé: </div>
                         <div class="" id="resumeImage">
-                            <img class="linkImg" src="img/icons/resumeblue.png">
+                            <img id="resumeImageChange" class="linkImg" src="img/icons/resumeblue.png">
                         </div>
                     </div>
                 </a>
             </div>
         </div>
+        <br>
+        <br>
+        <div class="titleLabel">
+            Certifications
+        </div>
+        <div class="hFlexBox">
+            <div class="flexbox">
+                <img class="certImg" src="img/icons/sec+_blue.png">
+                <br>
+                <br>
+                <div class="skillLabel">CompTIA Security+ SY0-701</div>
+            </div>
+            
+        </div>
+        <br>
+        <br>
+        <div class="titleLabel">
+            Experience
+        </div>
+       
         <div class="hFlexBox" id="experienceFlex">
             <div class="experienceBox">
                 <div class="experienceLeftFlexBox">
