--- a/public/index.html
+++ b/public/index.html
@@ -485,6 +485,12 @@
                     <img class="webAppImg" src="https://i.imgur.com/oPA0vHc.jpeg">
                 </div>
             </a>
+            <a href="whosThatPokemon/index.html" target="_blank">
+                <div class="webAppBox">
+                    <div class="webAppLabel">Who's That Pokémon?</div>
+                    <img class="webAppImg" src="https://i.imgur.com/InWLoKD.jpeg">
+                </div>
+            </a>
         </div>
     </div>
 
